--- a/src/Pages/Listado.css
+++ b/src/Pages/Listado.css
@@ -23,6 +23,9 @@
         text-decoration: none;
        
     }
+    .btn-edit:hover{
+        background-color: rgb(0, 152, 38);
+    }
     .btn-del{
         padding: 0.5em;
         background-color: rgb(163, 26, 26);
@@ -30,6 +33,10 @@
         border-radius: 10px;
         color: #ffffff;
         font-weight: bold;
+        cursor: pointer;
+    }
+    .btn-del:hover{
+        background-color: red;
     }
     .styled-table{
         border-collapse: collapse;
